fixing horizontal scroll

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -12623,7 +12623,7 @@ div#portfolio-content.container.grid {
     gap: 3rem;
   }
 }
-html {
+html, body {
   overflow-x: hidden;
 }
 
